@@ -104,6 +104,10 @@ val search_substring: string -> string -> int -> int
            at offset [start] in [str].  Raise [Not_found] if [pat]
            does not occur. *)
 
+val replace_substring: before:string -> after:string -> string -> string
+        (* [search_substring ~before ~after str] replaces all occurences
+           of [before] with [after] in [str] and returns the resulting string. *)
+
 val rev_split_words: string -> string list
         (* [rev_split_words s] splits [s] in blank-separated words, and return
            the list of words in reverse order. *)
